--- a/app/events.html
+++ b/app/events.html
@@ -5,10 +5,12 @@
     <script src="bower_components/angular/angular.js"></script>
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
-    <link href="app.css" rel="stylesheet"/>
-    <script src="app.js"></script>
+    <link href="css/app.css" rel="stylesheet"/>
+    <script src="js/controller/app.js"></script>
 </head>
 <body>
+<script src="js/vendor/JmsClient.js"></script>
+<script src="js/vendor/WebSocket.js"></script>
 <div id="todoPanel" class="panel" ng-controller="mainCtl">
     <h3 class="panel-header">To Do List</h3>
 
@@ -38,6 +40,12 @@
     <div class="msg-container">
         <div ng-repeat="message in localMessages">
             {{message.message}}
+        </div>
+    </div>
+    <h4>WebSocket Messages</h4>
+    <div class="msg-container">
+        <div ng-repeat="message in webSocketMessages">
+            <p ng-class="message.class">{{message.message}}</p>
         </div>
     </div>
 </div>
